feat: crud basico

--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
 		<dependency>
 			<groupId>io.awspring.cloud</groupId>
 			<artifactId>spring-cloud-aws-starter-sqs</artifactId>
-			<version>3.1.1</version>
+			<version>4.0.0-M1</version>
 		</dependency>
 	</dependencies>
 
