--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ Thumbs.db
 
 # Spring Boot
 src/main/resources/application.properties
+src/main/resources/application.yml
 
 application-*.properties
 application-*.yml
